# nn-transductive-learning

./: .gitignore  .isort.cfg  Makefile  README.md  main.py  pyproject.toml  requirements.txt
config/: model_config.yml  training_config.yml
data/: README.md  X_labeled.pkl  X_unlabeled.pkl  cats.pkl  dogs.pkl  y_labeled.pkl
models/: base.py  lightning.py
tests/config/: training_config.yml
tests/models/: test_base.py  test_lightning.py
