[tool.isort]
profile = "black"

[tool.black]
line-length = 120
skip_magic_trailing_comma = true  # For compatibility with pydoc>=4.6, check if still needed.
experimental-string-processing = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.poetry]
name = "nn-transductive-learning"
version = "0.1.0"
description = ""
authors = ["Yoshi Gao <yoshi4868686@gmail.com>"]
readme = "README.md"
packages = [{include = "nn_transductive_learning"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
torch = "^1.13.1"
pytorch-lightning = "^1.9.4"
pandas = "^1.5.3"
scikit-learn = "^1.1.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
